--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -1,6 +1,10 @@
 @import "typography";
+@import "keyframes";
 @import "slider";
 @import "img";
 @import "link";
+@import "scroll-down-icon";
+
+@import "section";
 
 @import "main-info";
