--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -1,3 +1,14 @@
 $primary: #9e9e9e;
 $primary--light: #cfcfcf;
 $primary--dark: #707070;
+$primary--text: #f5f5f5;
+
+$secondary: #212121;
+$secondary--light: #484848;
+$secondary--dark: #000000;
+$secondary--text: #eeeeee;
+
+$vk-color: #4680c2;
+$facebook-color: #4172b8;
+$twitter-color: #1da1f2;
+$github-color: #181717;
