--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -2,4 +2,13 @@
   &--full-height {
     min-height: 100vh;
   }
+
+  &__title {
+    margin: 0;
+    margin-bottom: 20px;
+
+    font-size: 5vw;
+    line-height: 1.2;
+    color: $secondary;
+  }
 }
