--- a/src/scss/components/_scroll-down-icon.scss
+++ b/src/scss/components/_scroll-down-icon.scss
@@ -5,6 +5,6 @@
   fill: $secondary;
 
   &--animate {
-    animation: scroll-down 3s ease-in-out infinite;
+    animation: pulse 3s ease-in-out infinite;
   }
 }
