--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -1,5 +1,1 @@
-// Required Core Stylesheet
-@import "~@glidejs/glide/src/assets/sass/glide.core";
-
-// Optional Theme Stylesheet
-@import "~@glidejs/glide/src/assets/sass/glide.theme";
+@import "~swiper/swiper.scss";
