--- a/src/scss/components/_keyframes.scss
+++ b/src/scss/components/_keyframes.scss
@@ -18,3 +18,18 @@
     max-height: 2000px;
   }
 }
+
+@keyframes pulse {
+  0% {
+    opacity: 1;
+    transform: none;
+  }
+  50% {
+    opacity: 0.8;
+    transform: scale(0.8);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
