--- a/src/scss/components/_expansion-panel.scss
+++ b/src/scss/components/_expansion-panel.scss
@@ -40,6 +40,10 @@
 
     transition: 0.3s opacity linear;
 
+    @include media("<tablet") {
+      font-size: 5vw;
+    }
+
     &:hover,
     &:focus {
       opacity: 0.5;
@@ -76,6 +80,10 @@
     line-height: 1.1;
 
     transition: opacity 0.3s linear;
+
+    @include media("<tablet") {
+      font-size: 4vw;
+    }
 
     &.open {
       height: auto;
