--- a/src/scss/section/_section.scss
+++ b/src/scss/section/_section.scss
@@ -6,6 +6,16 @@
     min-height: 100vh;
   }
 
+  &--relative {
+    position: relative;
+  }
+
+  &__scroll-icon {
+    position: absolute;
+    bottom: 20px;
+    right: 10px;
+  }
+
   &__title {
     margin: 0;
     margin-bottom: 20px;
@@ -13,6 +23,10 @@
     font-size: 5vw;
     line-height: 1.2;
     color: $secondary;
+
+    @include media("<tablet") {
+      font-size: 10vw;
+    }
   }
 
   &__projects {
